--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@types/express": "^4.17.21",
+    "express": "^4.21.0",
+    "flowbite-react": "^0.10.1"
+  }
 }
